Fixed option chain header z-index.

--- a/src/index.css
+++ b/src/index.css
@@ -320,7 +320,7 @@ div.my-radio-group-label {
 thead.my-sticky-thead > tr > th {
   top: 0;
   position: sticky;
-  z-index: 1000;
+  z-index: 3;
   background: inherit;
 }
 
